# miom

./: .gitignore  404.html  README.md  index.html  mkdocs.yml  objects.inv  pyproject.toml  requirements.txt  sitemap.xml
.github/workflows/: deploy-docs.yml  deploy-mkdocs.yml  docs.yml  unit-tests.yml
.github/workflows/reqs/: mkdocs-reqs.txt
docs/: index.md
docs/examples/: fastcore.md  fba.md  imat.md  sparse_fba.md
docs/overrides/: main.html
docs/references/: mio.md  miom.md
docs/stylesheets/: extra.css
examples/: exact_fastcore_example.py  fba_example.py  imat_example.py  introduction_example.py  sparse_fba_example.py
examples/fastcore/: index.html
examples/fba/: index.html
examples/imat/: index.html
examples/sparse_fba/: index.html
miom/: __init__.py  __main__.py  mio.py  miom.py  tools.py
overrides/: main.html
references/mio/: index.html
references/miom/: index.html
search/: search_index.json
tests/: test_miom.py
tests/models/: example_r13m10.miom
