[tool.poetry]
name = "miom"
version = "0.9.0-alpha.5"
description = "Mixed Integer Optimization for Metabolism"
authors = ["Pablo R. Mier <pablo.rodriguez.mier@gmail.com>"]
keywords = ["optimization", "LP", "MIP", "metabolism", "metabolic-networks"]
license = "GPLv3"
readme = "README.md"
repository = "https://github.com/MetExplore/miom/"
homepage = "https://github.com/MetExplore/miom/"
include = ["LICENSE"]

[tool.poetry.dependencies]
python = "^3.6"
numpy = "^1.19.2"
mip = "^1.13.0"
PICOS = "^2.2.52"
swiglpk = "^5.0.3"

[tool.poetry.extras]
all = ["gurobipy", "Mosek"]

[tool.poetry.dev-dependencies]
mkdocs-material = "^7.2.1"
mkdocstrings = "^0.15.2"
pytest = "^6.2.4"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
