[tool.poetry]
name = "miom"
version = "0.9.0-beta.9"
description = "Mixed Integer Optimization for Metabolism"
authors = ["Pablo R. Mier <pablo.rodriguez.mier@gmail.com>"]
keywords = ["optimization", "LP", "MIP", "metabolism", "metabolic-networks"]
license = "GPLv3"
readme = "README.md"
repository = "https://github.com/MetExplore/miom/"
homepage = "https://github.com/MetExplore/miom/"
include = ["LICENSE"]

[tool.poetry.dependencies]
python = "^3.6.1"
numpy = "^1.19.0"
mip = "^1.13.0"
PICOS = {version = "^2.2.52", optional = true}
swiglpk = {version = "^5.0.3", optional = true}
gurobipy = {version = "^9.1.2", optional = true}
Mosek = {version = "^9.3.3", optional = true}
cobra = {version = "^0.22.0", optional = true}


[tool.poetry.extras]
glpk = ["swiglpk", "PICOS"]
gurobi = ["gurobipy", "PICOS"]
mosek = ["Mosek", "PICOS"]
all = ["gurobipy", "Mosek", "swiglpk", "PICOS"]
full = ["gurobipy", "Mosek", "swiglpk", "PICOS", "cobra"]

[tool.poetry.dev-dependencies]
mkdocs-material = "^7.2.1"
mkdocstrings = "^0.15.2"
pytest = "^6.2.4"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
